# lambda-terraform

./: README.md  batch_handler.py  batch_simpleTemplate.tf  simle-notify-result.py  simple-lambda.py  start-function.py
lambda/: evml-simple-batch-task
lambda/common_utils/: error_utils.py  exceptions.py
lambda/evml-simple-batch-task/: handler.py  pyproject.toml
lambda/evml-simple-batch_task/: handler.py  test_file.py
lambda/evml-simple-lambda/: handler.py  pyproject.toml
lambda/evml-simple-notify-result/: handler.py  pyproject.toml
lambda/evml-start-batch-fn/: handler.py
lambda/evml-start-batch-job/: handler.py  pyproject.toml
lambda/evml_simple_batch_task/: handler.py
lambda/evml_start_batch_fn/: pyproject.toml
scripts/: entry.sh
stepfunctions/simple-lambda/: state-machine.json
terraform/configs/backend/: develop.conf  sandbox.conf  test.conf
terraform/evml/: backend.tf  locals.tf  main.tf  variables.tf
tests/evml-simple-lambda/: sample-payload.json
